<resources>
    <string name="app_name">Dinoapp</string>
    <!-- String de -->
    <string name="error_conexion">Error de conexion</string>
    <string name="texto_conexion">Por favor revise su conexion a internet</string>
    <string name="bReintentar">Reintentar</string>
    <!-- String del BienvenidaFragment -->
    <string name="bienvenida_fragment_title">¡Bienvenido!</string>
    <string name="bienvenida_fragment_text">Aprendamos juntos acerca de los dinosaurios</string>
    <!-- Strings del SexoFragment -->
    <string name="male_text">Soy un niño</string>
    <string name="female_text">Soy una niña</string>
    <string name="continue_button_text">Continuar</string>
    <string name="sexo_fragment_text">Cuéntame sobre ti</string>
    <!-- Strings del NombreFragment -->
    <string name="nombre_fragment_text">¿Cómo te llamas?</string>
    <string name="hint_fragment_text">Nombre</string>
    <!-- Strings del ImagenFragment -->
    <string name="imagen_fragment_text">Elige una imagen de perfil</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- filter list -->
    <string-array name="filter_list">
        <item>herbivoro</item>
        <item>carnivoro</item>
        <item>triasico</item>
        <item>jurasico</item>
        <item>cretacico</item>
        <item>terrestre</item>
        <item>saurisquios</item>
        <item>ornitisquios</item>
    </string-array>
    <string name="title_activity_rename_name">rename_name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>